chore: update _config.yml - delete baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ pwa:
 paginate: 15
 
 # The base URL of your site
-baseurl: "https://jjkkim88.github.io"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
