--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
+  google: Dyj-gMx46t4QKKXWB5VjAlHQYba6iuZiQ7uMlxJRBc0
+  bing: 8E1766C0BCFBDAB552065427822D6EF9
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
   baidu: # fill in your Baidu verification code
