--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,8 @@ analytics:
   google:
     id: # fill in your Google Analytics ID
   goatcounter:
-    id: # fill in your GoatCounter ID
+    id: "jjkkim88"
+    pageviews: true
   umami:
     id: # fill in your Umami ID
     domain: # fill in your Umami domain
