--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: >- # used by seo meta and the atom feed
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://jjkkim88.github.io"
 
+
 github:
   username: jjkkim88 # change to your GitHub username
 
@@ -229,3 +230,6 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+plugins:
+  - jekyll-sitemap
